--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
 
     <footer class="footer">
       <p>
+        <a href="admin.html">管理画面</a>
+      </p>
+      <p>
         <small>&copy; NEWS</small>
       </p>
     </footer>
