💕 FEAT: published追加、create-news実装

--- a/public/create-news.html
+++ b/public/create-news.html
@@ -24,10 +24,10 @@
 
     <main class="main">
       <section class="create-news">
-        <form>
+        <form id="create-news-form">
           <label class="create-news__item">
             <p class="create-news__title">タイトル</p>
-            <p class="create-news__detail">100文字以内</p>
+            <p class="create-news__detail" name="title">100文字以内</p>
             <input type="text" class="create-news__input">
           </label>
           <label class="create-news__item">
@@ -61,7 +61,7 @@
   </div><!--/wrapper-->
 
 
-  <script src="js/admin.js"></script>
+  <script src="js/create-news.js"></script>
 </body>
 
 </html>
