--- a/public/admin.html
+++ b/public/admin.html
@@ -30,9 +30,10 @@
       <table class="news-table">
         <thead>
           <tr>
+            <th>状態</th>
             <th>日付</th>
             <th>カテゴリー</th>
-            <th width="50%">タイトル</th>
+            <th>タイトル</th>
             <th>編集</th>
             <th>削除</th>
           </tr>
