--- a/public/create-news.html
+++ b/public/create-news.html
@@ -11,17 +11,23 @@
 
 <body>
 
-  <div class="wrapper">
-    <header class="header">
-      <h1 class="site-title">新規投稿</h1>
-    </header>
-    <!-- <nav class="nav">
-      <ul class="nav-list">
-        <li><a href="admin.html" class="nav-btn">記事一覧</a></li>
-        <li><a href="create-news.html" class="nav-btn nav-btn--create-news">新規投稿</a></li>
-      </ul>
-    </nav> -->
+  <header class="header">
+    <div class="header__inner">
+      <h1 class="site-title">
+        <a href="admin.html">お知らせ管理画面</a>
+      </h1>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="index.html" class="nav-btn" target="_blank">ページ確認</a></li>
+          <li><a href="admin.html" class="nav-btn">投稿一覧</a></li>
+          <li><a href="create-news.html" class="nav-btn nav-btn--create-news">新規投稿</a></li>
+        </ul>
+      </nav>
+    </div><!--/header__inner-->
+  </header>
 
+  <div class="wrapper">
+    <h2>新規投稿</h2>
     <main class="main">
       <section class="create-news">
         <form id="create-news-form">
