💕 FEAT: 細かいCSS、JavaScripを追加

--- a/public/create-news.html
+++ b/public/create-news.html
@@ -51,7 +51,8 @@
             <textarea name="" id="" cols="30" rows="10" class="create-news__textarea"></textarea>
           </label>
           <div class="create-news__item">
-            <button class="create-news__btn">投稿</button>
+            <button class="create-news__btn create-news__btn--create">投稿</button>
+            <button class="create-news__btn create-news__btn--draft">下書きとして保存</button>
           </div>
         </form>
       </section><!--/create-news-->
