💕 FEAT: 細かいCSS修正

--- a/public/admin.html
+++ b/public/admin.html
@@ -28,6 +28,13 @@
 
   <div class="wrapper">
 
+    <section class="for-show">
+      <p>
+        ログイン機能は実装していません。誰でも投稿、編集ができます。<br>
+        まだ実装中の箇所があり、使いづらいところがあるかと思いますがご了承ください。作成者より
+      </p>
+    </section>
+
     <main class="main">
       <h2>投稿一覧</h2>
       <!-- 以下後回し -->
@@ -51,14 +58,14 @@
       </table>
     </main>
 
-    <footer class="footer">
-      <p>
-        <small>&copy; NEWS</small>
-      </p>
-    </footer>
 
   </div><!--/wrapper-->
 
+  <footer class="footer">
+    <p class="copyright">
+      <small class="copyright__inner"><span class="copyright__copy">&copy;</span> お知らせ管理画面</small>
+    </p>
+  </footer>
 
   <script src="js/admin.js"></script>
 </body>
