--- a/public/edit.html
+++ b/public/edit.html
@@ -65,13 +65,13 @@
       <p class="controlls-message"></p>
     </main>
 
-    <footer class="footer">
-      <p>
-        <small>&copy; NEWS</small>
-      </p>
-    </footer>
-
   </div><!--/wrapper-->
+
+  <footer class="footer">
+    <p class="copyright">
+      <small class="copyright__inner"><span class="copyright__copy">&copy;</span> お知らせ管理画面</small>
+    </p>
+  </footer>
 
 
   <script src="js/edit.js"></script>
