--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,11 @@
     </main>
 
     <footer class="footer">
-      <p>
+      <div class="footer-menu">
         <a href="admin.html">管理画面</a>
-      </p>
-      <p>
-        <small>&copy; NEWS</small>
+      </div>
+      <p class="copyright">
+        <small class="copyright__inner"><span class="copyright__copy">&copy;</span> NEWS</small>
       </p>
     </footer>
 
